--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,8 +2,11 @@
     <p>
       Made by
       <a href="https://www.jamesnuanez.com">James Nuanez</a>
-      in 2020 &mdash; Code available on
-      <a href="https://github.com/jamesnuanez/history-api-with-modals-demo">GitHub</a>
+      in 2020
+      <span class="nowrap">
+        &mdash; Code available on
+        <a href="https://github.com/jamesnuanez/history-api-with-modals-demo">GitHub</a>
+      </span>
     </p>
   </footer>
 </body>
