--- a/public/styles.css
+++ b/public/styles.css
@@ -22,6 +22,9 @@ main {
   display: block;
   flex-grow: 1;
   padding: 1rem;
+  width: 600px;
+  max-width: 100%;
+  margin: auto;
 }
 
 h1,
@@ -31,7 +34,7 @@ h2 {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 h2 {
@@ -49,7 +52,7 @@ a:hover {
 pre {
   border: 1px solid #ccc;
   padding: 0.2rem 0.5rem;
-  font-size: 1.8rem;
+  font-size: 1rem;
   line-height: 160%;
   overflow: auto;
 }
@@ -63,15 +66,19 @@ img {
   color: #fff;
   border: none;
   border-radius: 0.25rem;
-  padding: 1rem;
+  padding: 0.5rem;
   text-decoration: none;
   cursor: pointer;
-  margin-bottom: 2rem;
-  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  font-size: 1rem;
 }
 
 .button:hover {
   background: #3162A6;
+}
+
+.nowrap {
+  display: inline-block;
 }
 
 /*===========================================================================*/
@@ -84,7 +91,8 @@ header {
 }
 
 header > nav > ul {
-  margin: 0;
+  max-width: 600px;
+  margin: 0 auto;
   padding: 0;
   list-style: none;
   display: flex;
