--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title><%= `${ title ? `${title} | ` : '' }History API with Modals` %></title>
   <link rel="stylesheet" href="/styles.css">
+  <script async defer data-domain="history-api.jamesnuanez.com" src="https://plausible.io/js/plausible.outbound-links.js"></script>
 </head>
 <body>
   <header>
